Fix: parameters was missing 'px'. Created function to add 'px' to the parameters as the mouse slides

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     function handleUpdate() {
       const suffix = this.dataset.sizing || ''; // shows dataset.sizing or nothing (in the case of color)
       console.log(suffix);
+      document.documentElement.style.setProperty(`--${this.name}`, this.value+  suffix);s
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate));
     inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
-
 
   </script>
 
