--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
@@ -14,13 +13,13 @@
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px" data-name="Alex" data-cool="💩">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="100" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="images/maximus.jpg">
 
   <style>
 
@@ -48,10 +47,10 @@
 
   <script>
     const inputs = document.querySelectorAll('.controls input');
+
     function handleUpdate() {
-      const suffix = this.dataset.sizing || ''; // shows dataset.sizing or nothing (in the case of color)
-      console.log(suffix);
-      document.documentElement.style.setProperty(`--${this.name}`, this.value+  suffix);s
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value +  suffix);
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate));
